deploy: a4f7d9aa7bd7f37fa2776d0f47a670d03d9f6bab

--- a/hacspec_dev/prelude/index.html
+++ b/hacspec_dev/prelude/index.html
@@ -9,6 +9,8 @@
 to perform extra ways of reading.</p>
 </td></tr><tr class='module-item'><td><a class="trait" href="trait.Deserialize.html" title='hacspec_dev::prelude::Deserialize trait'>Deserialize</a></td><td class='docblock-short'><p>A <strong>data structure</strong> that can be deserialized from any data format supported
 by Serde.</p>
+</td></tr><tr class='module-item'><td><a class="trait" href="trait.DeserializeOwned.html" title='hacspec_dev::prelude::DeserializeOwned trait'>DeserializeOwned</a></td><td class='docblock-short'><p>A data structure that can be deserialized without borrowing any data from
+the deserializer.</p>
 </td></tr><tr class='module-item'><td><a class="trait" href="trait.Read.html" title='hacspec_dev::prelude::Read trait'>Read</a></td><td class='docblock-short'><p>The <code>Read</code> trait allows for reading bytes from a source.</p>
 </td></tr><tr class='module-item'><td><a class="trait" href="trait.Seek.html" title='hacspec_dev::prelude::Seek trait'>Seek</a></td><td class='docblock-short'><p>The <code>Seek</code> trait provides a cursor which can be moved within a stream of
 bytes.</p>
