deploy: 2dc5a76b2b463ecfbb032d1eee1cec76c2a1e3b2

--- a/src/hacspec_lib/array.rs.html
+++ b/src/hacspec_lib/array.rs.html
@@ -1051,7 +1051,7 @@
 <span class="doccomment">//! To define a new array type with name `State`, holding `16` `u32` run</span>
 <span class="doccomment">//!</span>
 <span class="doccomment">//! ```</span>
-<span class="doccomment">//! use hacspec_lib::prelude::*;</span>
+<span class="doccomment">//! use hacspec_lib::*;</span>
 <span class="doccomment">//! array!(State, 16, u32, type_for_indexes: StateIdx);</span>
 <span class="doccomment">//! ```</span>
 <span class="doccomment">//!</span>
