--- a/src/hacspec_lib/math_integers.rs.html
+++ b/src/hacspec_lib/math_integers.rs.html
@@ -1412,7 +1412,7 @@
 <span class="doccomment">//! * Natural Numbers modulo an integer: `nat_mod`, `public_nat_mod`</span>
 <span class="doccomment">//!</span>
 <span class="doccomment">//! ```</span>
-<span class="doccomment">//! use hacspec_lib::prelude::*;</span>
+<span class="doccomment">//! use hacspec_lib::*;</span>
 <span class="doccomment">//! unsigned_integer!(LargeSecretInteger, 233);</span>
 <span class="doccomment">//! let a = LargeSecretInteger::from_literal(1);</span>
 <span class="doccomment">//! let b = LargeSecretInteger::from_literal(2);</span>
