--- a/src/hacspec_lib/traits.rs.html
+++ b/src/hacspec_lib/traits.rs.html
@@ -225,7 +225,7 @@
     <span class="doccomment">/// # Examples</span>
     <span class="doccomment">///</span>
     <span class="doccomment">/// ```</span>
-    <span class="doccomment">/// use hacspec_lib::prelude::*;</span>
+    <span class="doccomment">/// use hacspec_lib::*;</span>
     <span class="doccomment">///</span>
     <span class="doccomment">/// let mut s = Seq::&lt;u8&gt;::new(5);</span>
     <span class="doccomment">/// let tmp = Seq::&lt;u8&gt;::from_native_slice(&amp;[2, 3]);</span>
@@ -245,7 +245,7 @@
     <span class="doccomment">/// # Examples</span>
     <span class="doccomment">///</span>
     <span class="doccomment">/// ```</span>
-    <span class="doccomment">/// use hacspec_lib::prelude::*;</span>
+    <span class="doccomment">/// use hacspec_lib::*;</span>
     <span class="doccomment">///</span>
     <span class="doccomment">/// let mut s = Seq::&lt;u8&gt;::new(5);</span>
     <span class="doccomment">/// let tmp = Seq::&lt;u8&gt;::from_native_slice(&amp;[2, 3]);</span>
